--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
 </head>
 
 <body>
-
-
-
     <!-- Section 2 -->
     <section id="bg-1" class="container-fluid">
         <div class="row">
@@ -77,6 +74,7 @@
                 </form>
                 <a data-toggle="modal" data-target="#myModal" id="mbutton" class="btn btn-primary d-block">
                     <h4>Enquire Now</h4>
+                    <p>Click Here!</p>
                 </a>
             </div>
         </div>
@@ -396,6 +394,7 @@
                 </a>
                 <a data-toggle="modal" data-target="#myModal" id="mbutton" class="btn btn-primary d-block">
                     <h4>Enquire Now</h4>
+                    <p>Click Here!</p>
                 </a>
             </div>
         </div>
@@ -451,6 +450,7 @@
                 </a>
                 <a data-toggle="modal" data-target="#myModal" id="mbutton" class="btn btn-primary d-block">
                     <h4>Enquire Now</h4>
+                    <p>Click Here!</p>
                 </a>
             </div>
         </div>
@@ -547,6 +547,7 @@
                 </a>
                 <a data-toggle="modal" data-target="#myModal" id="mbutton" class="btn btn-primary d-block">
                     <h4>Enquire Now</h4>
+                    <p>Click Here!</p>
                 </a>
             </div>
         </div>
@@ -609,7 +610,7 @@
             <div class="col-lg-2 col-6 pt-4 m-auto">
                 <img src="images/prof/3.jpg" class="img-fluid">
                 <h6 class="text-center m-0">Rahul Narvekar</h6>
-                <p class="text-center">India Ange Fund</p>
+                <p class="text-center">India Angle Fund and The India Network</p>
             </div>
             <div class="col-lg-2 col-6 pt-4 m-auto">
                 <img src="images/prof/4.jpg" class="img-fluid">
@@ -618,13 +619,41 @@
             </div>
             <div class="col-lg-2 col-6 pt-4 m-auto">
                 <img src="images/prof/5.jpg" class="img-fluid">
-                <h6 class="text-center m-0">Anuradha Aharwal</h6>
+                <h6 class="text-center m-0">Anuradha Agarwal</h6>
                 <p class="text-center">Multibhashi</p>
             </div>
             <div class="col-lg-2 col-6 pt-4 m-auto">
                 <img src="images/prof/6.jpg" class="img-fluid">
                 <h6 class="text-center m-0">Samir Sathe</h6>
-                <p class="text-center">Wadhwani</p>
+                <p class="text-center">Wadhwani Foundation</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="bg-2" class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 pt-4">
+                <h1 class="text-center">Still Not Convinced?</h1>
+                <h4 class="text-center underline"></h4>
+            </div>
+            <div class="col-12 pt-4">
+                <h5 class="text-center mb-3">Fill The Enquire Form Now!</h5>
+                <h5 class="text-center mb-3">Our Business Consultants Will Call You</h5>
+                <h5 class="text-center mb-3">And Will Guide You To Build Your Successful Startup!</h5>
+                <h5 class="text-center mb-3">I'm Sure You Will Love It! 😃</h5>
+            </div>
+            <div class="col-lg-12 col-md-12 pt-4">
+                <a data-toggle="modal" data-target="#myModal" id="pbutton" class="btn btn-primary d-block">
+                    <h4>Enquire Now to Start Your Startup</h4>
+                    <p>and avoid mistakes that leads to startup failure</p>
+                </a>
+                <a data-toggle="modal" data-target="#myModal" id="mbutton" class="btn btn-primary d-block">
+                    <h4>Enquire Now</h4>
+                    <p>Click Here!</p>
+                </a>
+            </div>
+            <div class="col-12 pt-4">
+                <h5 class="text-center">PS: Failing Is Not A Crime, Not Trying Is! 🔥</h5>
             </div>
         </div>
     </section>
